--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-input-mask": "^2.0.4",
     "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0"
   },
   "devDependencies": {
